Fix CSS and static assets loading on Vercel

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Your Name</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -46,7 +46,7 @@
             </div>
             <div class="hero-image">
                 <div class="hero-placeholder">
-                    <img src="foto/logo.jpg" alt="Profile" class="hero-img">
+                    <img src="/foto/logo.jpg" alt="Profile" class="hero-img">
                 </div>
             </div>
         </div>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="about-image">
                     <div class="about-placeholder">
-                        <img src="foto/logo.jpg" alt="About me" class="about-img">
+                        <img src="/foto/logo.jpg" alt="About me" class="about-img">
                     </div>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                 <div class="project-card">
                     <div class="project-image">
                         <div class="project-placeholder">
-                            <img src="foto/logo.jpg" alt="Project 1" class="project-img">
+                            <img src="/foto/logo.jpg" alt="Project 1" class="project-img">
                         </div>
                     </div>
                     <div class="project-content">
@@ -127,7 +127,7 @@
                 <div class="project-card">
                     <div class="project-image">
                         <div class="project-placeholder">
-                            <img src="foto/logo.jpg" alt="Project 2" class="project-img">
+                            <img src="/foto/logo.jpg" alt="Project 2" class="project-img">
                         </div>
                     </div>
                     <div class="project-content">
@@ -151,7 +151,7 @@
                 <div class="project-card">
                     <div class="project-image">
                         <div class="project-placeholder">
-                            <img src="foto/logo.jpg" alt="Project 3" class="project-img">
+                            <img src="/foto/logo.jpg" alt="Project 3" class="project-img">
                         </div>
                     </div>
                     <div class="project-content">
@@ -258,6 +258,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
